--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -6,6 +6,9 @@ on:
     paths:
       - 'ChessChatApp.zip'
 
+permissions:
+  contents: write
+
 jobs:
   unzip-files:
     runs-on: ubuntu-latest
@@ -13,12 +16,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Unzip files
         run: |
           echo "📦 Unzipping Chess Chat App..."
           unzip -o ChessChatApp.zip
           echo "✅ Files unzipped successfully!"
+          ls -la
           
       - name: Remove ZIP file
         run: |
@@ -30,11 +36,12 @@ jobs:
           git config user.name "GitHub Actions Bot"
           git config user.email "actions@github.com"
           
-      - name: Commit unzipped files
+      - name: Commit and push unzipped files
         run: |
           git add .
-          git commit -m "Unzip Chess Chat App files" || echo "No changes to commit"
-          
-      - name: Push changes
-        run: |
-          git push origin main
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Unzip Chess Chat App files"
+            git push
+          fi
