--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -1,47 +1,1 @@
-name: Unzip Chess Chat App
-
-on:
-  workflow_dispatch:
-  push:
-    paths:
-      - 'ChessChatApp.zip'
-
-permissions:
-  contents: write
-
-jobs:
-  unzip-files:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-        
-      - name: Unzip files
-        run: |
-          echo "📦 Unzipping Chess Chat App..."
-          unzip -o ChessChatApp.zip
-          echo "✅ Files unzipped successfully!"
-          ls -la
-          
-      - name: Remove ZIP file
-        run: |
-          echo "🗑️  Removing ZIP file..."
-          rm ChessChatApp.zip
-          
-      - name: Configure Git
-        run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "actions@github.com"
-          
-      - name: Commit and push unzipped files
-        run: |
-          git add .
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "Unzip Chess Chat App files"
-            git push
-          fi
+name: Unzip App content
