--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -1,1 +1,47 @@
 name: Unzip App content
+
+on:
+  workflow_dispatch:
+  push:
+    paths:
+      - 'app.zip'
+
+permissions:
+  contents: write
+
+jobs:
+  unzip-files:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Unzip files
+        run: |
+          echo "??? Unzipping app.zip..."
+          unzip -o app.zip
+          echo "✅ Files unzipped successfully!"
+          ls -la
+
+      - name: Remove ZIP file
+        run: |
+          echo "???️  Removing ZIP file..."
+          rm app.zip
+
+      - name: Configure Git
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "actions@github.com"
+
+      - name: Commit and push unzipped files
+        run: |
+          git add .
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Unzip app.zip files"
+            git push
+          fi
